handle the display of picture

--- a/算法模板.md
+++ b/算法模板.md
@@ -779,7 +779,7 @@ for(int i=1;i<=m<<1;i++){ // 逐个扫描每一条边，处理每一个割边，
 
 无向图的所有点双连通分量不含有割点。在边双连通分量中，将原图删去割点即得到所有的边双连通分量；而点双连通分量情形稍复杂，割点会裂点到关联的点双连通分量中。如下图，结点1和5是割点，它们会裂点到相关联的点双连通分量中。这意味着，割点会存在多个点双连通分量中，而非割点只会存在于某一个点双连通分量中。
 
-<img src="D:\Typora\note\picture\16.png" style="zoom:50%;" />
+<img src="picture\16.png" style="zoom:50%;" />
 
 可以在`O(N+M)`的时间复杂度下求出无向图的所有vDCC，如下：
 
@@ -850,7 +850,7 @@ void SOLVE(){
 
 点双连通分量的缩点也稍有区别。不仅所有点双连通分量缩成一个点，还需要同相应的割点连边。如下图所示，四个vDCC分别缩点为编号1,2,3,4的结点，原有的割点1和5变为编号为5和6的结点连接所有缩点，形成缩点树。
 
-<img src="D:\Typora\note\picture\17.png" style="zoom:50%;" />
+<img src="picture\17.png" style="zoom:50%;" />
 
 可以在`O(N)`的时间复杂度下通过vDCC建立缩点树，如下：
 
@@ -1338,7 +1338,7 @@ dfs序+RMQ求LCA的时间复杂度为`O(NlogN + M)`其中N为结点个数，M为
 
 定义数组`dfn[]`为结点的`dfs序`。可以在dfs过程中处理。欧拉序是深度搜索序列(考虑回溯)。
 
-![](D:\Typora\note\picture\15.jpg)
+![](picture/15.jpg)
 
 如上图，其dfs序为 `A -> B -> D -> F -> D -> G -> H -> G -> I -> G -> D -> B -> E -> B -> A -> C -> A`。
 
@@ -1677,7 +1677,7 @@ void SOLVE(){
 
 具体地，先求出树的**欧拉序**。欧拉序列就是从根节点开始进行一次dfs遍历，当第一次到达某个点时，将它记下来，当最后一次到达这个点离开时，再记录一次这个点。例如下图的欧拉序为 `1->2->3->6->6->4->4->5->5->3->7->7->2->1`。
 
-![](picture\18.png)
+![](picture/18.png)
 
 欧拉序可通过一次dfs求出，如下：
 
