更新1.11网络流1.11.1dinic

--- a/算法模板.md
+++ b/算法模板.md
@@ -1140,6 +1140,123 @@ int main()
 }
 ```
 
+## 1.11 网络流
+
+### 1.11.1 dinic算法求网络最大流
+
+---
+
+在有向图上给定源点 $s$ 和汇点 $t$，求从源点到汇点的最大流量。
+
+假定图的结点数目为 $n$ ，边的数目为 $m$ ，使用**dinic算法**的时间复杂度为$O(n^2m)$​。 
+
+dinic算法的整体思路如下：
+
+1. 构建图时对每一条边构建一条反向边，初始化其容量(权值)为0。
+2. 对图执行bfs得到其分层图。
+3. 在分层图上进行dfs，得到当前可行的流量值，对于每条边，如果其有流量f，则其边容量(权值)减去f，其反向边容量(权值)加上f。
+4. 继续2操作，直到bfs搜索分层图无法达到汇点t。
+5. 每一次dfs得到的流量值加起来就是最大流。
+
+由上整体思路发现，需要维护边及其反向边的权值，故存图应用链式前向星。
+
+对dinic算法有三条可行优化：
+
+1. 当前弧优化。(保证复杂度正确的优化，一定要使用)
+2. 剩余流量优化。(常数优化，在随机图中优化效果显著)
+3. 残枝优化。(常数优化，有一定的效果)
+
+```c++
+struct edge {
+    int u,v,w,next;
+}e[maxm << 1];
+int cnt = 1; // 由于需要更新反向边，所以cnt从1开始，可^1得到其反向边
+int head[maxn];
+void addedge(int x,int y,int z){
+    e[++cnt] = {x,y,z,head[x]};
+    head[x] = cnt;
+}
+int n,m,s,t;
+int cur[maxn]; //记录结点的当前弧，用于当前弧优化
+
+int dep[maxn]; // 记录结点在分层图的深度
+//建立分层图,如果能到达汇点t，返回true，否则返回false
+bool bfs(){
+    memset(dep,0,sizeof(dep)); // dep初始化
+    deque<int>q;
+
+    //将源点加入队列
+    q.push_back(s);
+    dep[s] = 1;
+
+    while(!q.empty()){
+        int u = q.front();
+        q.pop_front(); //弹出队首
+
+        for(int i=head[u];i!=-1;i=e[i].next){
+            int v = e[i].v;
+            if(!dep[v] && e[i].w > 0){ //结点没有被访问并且这条边还有容量(w > 0)
+                dep[v] = dep[u] + 1;
+                q.push_back(v);
+                if(v == t) return true; //搜索到了汇点，直接返回true
+            }
+        }
+    }
+
+    //运行到这里，说明没有搜到汇点t，返回false
+    return false;
+}
+
+LL dfs(int u,LL mf){ //当前结点u，当前可用流量mf,mf的值一开始设置为无穷大
+    if(u == t) return mf; //搜到了汇点t，表明当前mf流量都可以流到汇点,返回mf
+    LL sum = 0; //记录当前u可以流出多少流量
+
+    for(int i=cur[u];i!=-1;i=e[i].next){
+        cur[u] = i; //当前弧优化：记录当前正在压榨流量的边，在这之前的边已经被压榨完了，下次搜索到u就不需要搜那些被压榨完流量的边了
+
+        int v = e[i].v;
+        if(dep[v] == dep[u] + 1 && e[i].w > 0){ // 是分层图的后继结点并且还有容量可用
+            LL f = dfs(v,min(mf,(LL)e[i].w)); // 处理结点v,可用流量显然是mf和到v的这条边的容量的较小值,返回结点v可以流到汇点t的流量值
+            e[i].w -= f;
+            e[i ^ 1].w += f; //更新这条边的容量信息
+            sum += f; //更新当前u结点流出的流量
+            mf -= f; //更新当前结点的剩余可用流量
+            if(mf == 0) break; // 剩余流量优化：如果当前结点没有剩余可用流量了，那么继续从当前结点往后搜肯定是没有必要的，直接退出
+        }
+    }
+
+    if(sum == 0) dep[u] = 0; // 残枝优化：处理完当前结点后，sum为0代表没有流出任何流量，这说明u结点无法到达汇点t(如果能到达肯定有流量),那么后续搜索就不需要搜u了，将u的dep值变为0，保证后续不会搜索u
+    return sum; //返回当前结点流出的流量值
+
+}
+
+
+
+LL dinic(){
+    LL flow = 0; //记录总可行流
+    while(bfs()){ // 当能够到达汇点t时,执行dfs搜索，记录流量。当到达不了汇点时，代表没有流量可以压榨了，flow值就是最大流
+        memcpy(cur,head,sizeof(head)); // 初始化cur值
+        flow += dfs(s,1e9); //从源点s开始搜索，剩余可用容量先初始化为无穷大
+    }
+    return flow;
+}
+
+
+void SOLVE(){
+    memset(head,-1,sizeof(head)); //初始化head为-1
+    cin >> n >> m >> s >> t;
+    for(int i=1;i<=m;i++){
+        int a,b,c;
+        cin >> a >> b >> c;
+        addedge(a,b,c);
+        addedge(b,a,0); //反向边流量初始化为0，注意不要忘记添加反向边
+    }
+
+    cout << dinic() << "\n";
+    
+}
+```
+
 # 2 树相关算法
 
 ## 2.1 树的重心
@@ -4815,6 +4932,21 @@ void SOLVE(){
 
 }
 ```
+
+## 7.3 状态压缩DP
+
+### 7.3.1 常用位运算操作
+
+---
+
+|               功能                |                             操作                             |                  结果                   |
+| :-------------------------------: | :----------------------------------------------------------: | :-------------------------------------: |
+|        判断是否存在相邻的1        |                      $x\ \&\  (x >> 1)$                      |      为0则不存在相邻的1，否则存在       |
+|  判断是否存在距离小于或等于k的1   | $x\ \&\  (x >> 1)$，$x\ \&\  (x >> 2)$，...，$x\ \&\  (x >> k)$ | 都为0则不存在距离小于等于k的1，否则存在 |
+| 判断 $x$ 和 $y$ 是否在某位上都为1 |                         $x \ \& \ y$                         |          为0则不存在，否则存在          |
+|     统计 $x$ 的二进制1的个数      |              $while(x)\{ x  =x\&(x-1),cnt++\}$               |          cnt的值即为其1的个数           |
+
+
 
 # 8 数学
 
