更新2.10树上差分

--- a/算法模板.md
+++ b/算法模板.md
@@ -2161,6 +2161,83 @@ int query(int x,int y){
 }
 ```
 
+## 2.10 树上差分
+
+树上差分常用来处理树上结点或边的路径覆盖次数。分为**点差分**和**边差分**。如果涉及点的覆盖，就使用**点差分**，如果问题涉及边的覆盖，就使用**边差分**。
+
+### 2.10.1 边差分
+
+---
+
+给出结点数目为 $n$ 的树，有 $m$ 条路径，每条路径从某起点 $x$ 出发到某终点 $y$，途经的每条**边**视为被经过一次，求最终每条**边**被经过多少次。
+
+开一个数组$val[N]$，其中$val[i]$表示结点$i$和其父结点相连的边被经过了多少次。
+
+考虑对某一条路径 $\{x→y\}$，执行下列操作：
+
+1. $val[x]++$
+2. $val[y]++$
+3. $val[LCA(x,y)] -= 2$
+
+最终对于某结点$i$,其子树所有结点的$val$值之和就是其与父结点相连的边被经过的次数,这可以通过一遍dfs完成。
+
+```c++
+vector<pair<int,int>>G[maxn]; // 树结构 G[u] -> {v,w},w记录<u,v>这条边的编号
+int val[maxn]; //每个结点的val值
+int sumval[maxn]; //记录结点子树的val值之和
+int ans[maxn]; //记录边被经过的次数
+void dfs(int u,int pre){
+    sumval[u] = val[u];
+    for(auto [v,w] : G[u]){
+        if(v == pre) continue;
+        dfs(v,u);
+        sumval[u] += sumval[v];
+    }
+    
+    for(auto [v,w] : G[u]){
+        if(v == pre){ // v == pre 代表v是父亲，此时w就是结点u和其父亲连的边的编号
+            ans[w] = sumval[u]; // 得到该边被经过的次数
+        }
+    }
+}
+```
+
+时间复杂度为$O(mlogn)$，如果使用RMQ求LCA，时间复杂度为$O(m + nlogn)$。
+
+### 2.10.2 点差分
+
+---
+
+给出结点数目为 $n$ 的树，有 $m$ 条路径，每条路径从某起点 $x$ 出发到某终点 $y$​，途经的每个**结点**视为被经过一次，求最终每个**结点**被经过多少次。
+
+开一个数组$val[N]$，其中$val[i]$表示结点$i$被经过了多少次。
+
+考虑对某一条路径 $\{x→y\}$，执行下列操作：
+
+1. $val[x]++$
+2. $val[y]++$
+3. $val[LCA(x,y)]--$
+4. $val[fa[LCA(x,y)]]--$​
+
+最终对于某结点$i$,其子树所有结点的$val$值之和被经过的次数,这可以通过一遍dfs完成。
+
+```c++
+vector<int>G[maxn]; // 树结构
+int val[maxn]; //每个结点的val值
+int sumval[maxn]; //记录结点子树的val值之和,这就是最终结点被经过的次数
+void dfs(int u,int pre){
+    sumval[u] = val[u];
+    for(auto [v,w] : G[u]){
+        if(v == pre) continue;
+        dfs(v,u);
+        sumval[u] += sumval[v];
+    }
+    //最终sumval[u]就是结点u被经过的次数
+}
+```
+
+在处理点差分时注意$fa[LCA(x,y)]$有可能不存在，这时候就不需要这步操作了。
+
 # 3 STL
 
 ## 3.1 队列 queue
