更新5.10 区间树

--- a/算法模板.md
+++ b/算法模板.md
@@ -4174,6 +4174,106 @@ LL queryMax(){
 
 TODO!!!
 
+## 5.10 区间树
+
+在一维数轴上给定若干区间 $[L,R]$ ，每个区间会覆盖数轴上的相应范围；给定若干查询，每个查询是一个范围，需要得到相应范围是否被完全覆盖。
+
+考虑使用 $map$ 维护这些区间。注意维护的区间应当**无交集**。
+
+```c++
+struct RNG { // 区间信息结构体
+    bool legal; //区间是否合法
+    double L,R; //区间左右端点
+};
+
+map<double,double> rng;
+```
+
+区间涉及**查询区间**以及**插入区间**两种操作。
+
+### 5.10.1 插入区间
+
+---
+
+在实现插入区间前，需要实现函数$getRange(double\ l)$,该函数会返回区间左端点小于等于$l$的第一个区间(即最近的区间)。分析可知，可通过 $upper\_bound$查找第一个大于等于$l$的区间，其前一个区间就是答案。如下:
+
+```c++
+RNG getRange(double l){
+    double resL,resR; // 记录答案区间
+    auto it = rng.upper_bound(l); // 第一个大于等于l的区间
+    if(it == rng.begin()){ // 第一个大于等于1的区间是首区间，代表前面没有区间了，也就没有答案了
+        return {false,resL,resR}; // 返回非法结果
+    }
+    --it; //往前找一个区间
+    resL = it->first;
+    resR = it->second; //记录答案区间
+    return {true,resL,resR};
+}
+```
+
+接下来实现插入区间操作，具体地，欲插入区间 $[l,r]$，先分别使用$getRange$查找左端点小于等于$l$和$r$的第一个区间，检验它们是否和当前区间 $[l,r]$有交集，如果有，则进行合并。
+
+```c++
+// 插入区间[l,r]
+void updateRange(double l,double r){
+    if(l > r) return ; //区间不合法
+    RNG lft = getRange(l); // 查找l之前的第一个区间
+    if(lft.legal && lft.R >= l){ // 存在l之前的区间并且该区间的右端点大于等于l，代表有交集
+        l = lft.L; // 更新区间左端点
+    }
+    RNG rt = getRange(r); // 查找r之前的第一个区间
+    if(rt.legal && rt.R >= r){ // 存在r之前的区间，并且可以合并成更大的范围
+        r = rt.R; // 更新区间右端点
+    }
+    
+    rng.erase(rng.lower_bound(l),rng.upper_bound(r)); // 删除所有在[l,r]范围内的区间记录,erase的删除是左闭右开的，因此右端点需要用upper_bound
+}
+```
+
+### 5.10.2 查询区间
+
+---
+
+查询区间有三种情况：
+
+1. 查询区间是否被部分覆盖
+2. 查询区间是否被完全覆盖
+3. 查询区间是否完全不被覆盖。
+
+其中第三种情况是第一种情况的对立事件，所以只处理前两种情况即可。
+
+查询区间 $[l,r]$​ 是否被完全覆盖。
+
+```c++
+// 查询区间[l,r]是否被完全覆盖，如果被完全覆盖返回true，否则返回false
+bool getQuery(double l,double r){
+    RNG res = getRange(l); // 查找l之前的第一个区间
+    if(!res.legal || r > res.R){ // 不存在前一个区间，或者存在该区间，但是区间的右端点没有r大，表明r更长，因此没有被完全覆盖
+        return false; // 没有被完全覆盖
+    }
+    return true;
+}
+```
+
+查询区间 $[l,r]$ 是否被部分覆盖。
+
+```c++
+// 查询区间[l,r]是否被部分覆盖，如果被部分覆盖返回true，否则返回false
+bool getQuery(double l,double r){
+    RNG res = getRange(l); // 查找l之前的第一个区间
+    if(res.legal){ // 存在前一个区间
+        if(res.R >= l) return true; //前一个区间右端点大于等于l，表明部分覆盖
+    }
+    auto nxt = rng.upper_bound(l); //查找大于l的第一个区间
+    if(nxt != rng.end()){ // 存在后一个区间
+        if(rng.L <= r) return true; //后一个区间左端点小于等于r，表明部分覆盖
+    }
+    return false;
+}
+```
+
+查询区间 $[l,r]$ 是否没有被覆盖，即是区间被部分覆盖的对立事件，如果区间没有被部分覆盖，就是没有被覆盖。
+
 # 6 字符串算法
 
 ## 6.1 KMP算法
