--- a/算法模板.md
+++ b/算法模板.md
@@ -4888,44 +4888,50 @@ $$
 
 ---
 
-Manacher用于统计字符串中最长回文对称串，时间复杂度稳定线性。
+Manacher用于统计字符串中最长回文对称串，时间复杂度稳定为$O(n)$。
 
 先将字符串的两两字符之间加上`#`字符以将所有的对称串的长度变为奇数。为防止边界出现错误，将字符串两头加上从未出现过的字符(比如`@`)。
 
-`L[i]`表示以i为中心的最长对称串的半径，注意L[i] ≥ 1，当L[i] == 1时，即仅与自身对称。
+$d[i]$ 表示以$i$为中心的最长对称串的半径，注意$d[i] ≥ 1$，当$d[i] == 1$​​时，即仅与自身对称。
+
+![](picture/20.png)
 
 ```c++
+int d[maxn << 1]; // d[i]表示以i为中心的最长对称半径,这里指的是变长的串的下标，所以注意开两倍空间
+int ans[maxn]; // ans[i] 表示原串中以i结尾的最长回文串长度
 void SOLVE(){
     string str;
-    cin >> str;
-    int len = str.length();
-    int n = 2 * len + 1;
-    string s;
-    s.resize(n+1);
-    s[0] = '@';s[n] = '@';s[1] = '#';
-    for(int i=0;i<len;i++){
-        s[(i+1) * 2] = str[i];
-        s[(i+1) * 2 + 1] = '#';
+    cin >> str; // 读入原串
+    string s; // 记录加了#号的变长串
+    s += "$#"; // s[0] == '$' s[1] == '#'
+    for(auto x : str){ // 交替添加字符和#号
+        s.push_back(x); // 添加字符
+        s += "#"; // 添加'#'
     }
+    int n = s.length(); // 变长串长度
     
-    vi L(n+1,0);
-    int k = 0,r = 0;
-    int ans = 0;
-    L[1] = 1;
+    d[1] = 1; // 初始化
+    int l,r = 1; // l,r记录当前盒子左右端点，也就是右端点最靠右的最长回文串
     for(int i=2;i<=n;i++){
-        if(i < r) L[i] = min(L[2 *q k - i],r - i);
-        else L[i] = 1;
-
-        while(s[i - L[i]] == s[i + L[i]]) L[i]++;
-        if(i + L[i] > r){
-            k = i;
-            r = i + L[i];
+        if(i <= r) d[i] = min(d[r - i + l],r - i + 1);
+        while(s[i - d[i]] == s[i + d[i]]) d[i]++;
+        if(i + d[i] - 1 > r){
+            // >>>> 这里是记录ans的部分，即获得原串中所有位置的回文长度，具体问题若不要求则可不写
+            for(int j=r+1;j<=i+d[i]-1;j++){ // 从上一个盒子的右端点到当前更新的盒子的右端点之间是新的未处理的位置，跑一遍，得到所有位置的回文长度
+                if(s[j] != '#' and s[j] != '$'){ // 当前位置是原字符位置
+                    ans[j / 2] = j - i + 1; // 当前的j位置对应的是原串的j/2位置(原串下标从1开始)
+                }
+            }
+            // <<<<
+            // 更新盒子左右端点
+            l = i - d[i] + 1;
+            r = i + d[i] - 1;
         }
-        ans = max(ans,L[i] - 1);
     }
-    cout << ans << "\n";
 }
 ```
+
+如果仅需求最长回文串的长度，那么就是$MAX\{d[i]\} - 1$。即半径减1，因为半径包含#号，正好对应原串的两倍长度。
 
 ## 6.8 扩展KMP(Z函数)
 
