更新8.10 质因数分解 8.11 欧拉函数

--- a/算法模板.md
+++ b/算法模板.md
@@ -5616,9 +5616,49 @@ void EXCRT(){
 }
 ```
 
+## 8.10 质因数分解
+
+使用**试除法**对某个数 $x$ 执行质因数分解，时间复杂度为 $O(\sqrt{x})$.
+
+```c++
+void get_prime_factor(int x){
+    vector<int>res; //记录质因数分解的结果,每个质因数只记录一次
+    for(int i=2;i*i<=x;i++){
+        if(x % i == 0){
+            res.push_back(i);
+            while(x % i == 0) x /= i;
+        }
+    }
+    if(x > 1) res.push_back(x); // 大于√x的质因数最多只有一个，如果最后x不为1，那么一定是这个质因数
+}
+```
+
+## 8.11 欧拉函数
+
+$1...N$ 中与 $N$ 互质的数的个数，被称为**欧拉函数**，记作$\varphi(N)$。
+
+一个显然的结论是如果 $N$ 是质数，那么$\varphi(N) = N - 1$。因为所有小于 $N$ 的数都和 $N$ 互质。
+
+对于任何 $N$ ，有：
+$$
+\varphi(N) = N \times \prod_{p|N} (\frac{p-1}{p})  \ \ \ \ \ \ \ \ \ \ \ \ (p是质数)
+$$
+$p$是质数，那么$p|N$就意味着$p$是$N$的质因子，因此可使用**试除法**在求解$N$的质因数的同时求解$\varphi(N)$。时间复杂度为$O(\sqrt{N})$.
+
+```c++
+long long getPhi(long long N){
+    long long res = N; 
+    for(int i=2;i*i<=N;i++){
+        if(N % i == 0){
+            res = res / i * (i - 1); // i是N的质因子,也就意味着N一定可以除以i，故不需担心除不尽的问题
+            while(N % i == 0) N /= i;
+        }
+    }
+    if(N > 1) res = res / N * (N - 1);
+}
+```
+
 # 9 计算几何
-
-
 
 # 10 类外算法
 
