更新8.11.2 线性筛法求欧拉函数

--- a/算法模板.md
+++ b/算法模板.md
@@ -5637,12 +5637,19 @@ void get_prime_factor(int x){
 
 $1...N$ 中与 $N$ 互质的数的个数，被称为**欧拉函数**，记作$\varphi(N)$。
 
-一个显然的结论是如果 $N$ 是质数，那么$\varphi(N) = N - 1$。因为所有小于 $N$ 的数都和 $N$ 互质。
+一个显然的结论是如果 $N$ 是质数，那么$\varphi(N) = N - 1$。因为所有小于 $N$ 的数都和 $N$​ 互质。
+
+**欧拉函数**是积性函数，意味着对于互质的$m,n$，有$\varphi(m \times n) = \varphi(m) \times \varphi(n)$。
 
 对于任何 $N$ ，有：
 $$
 \varphi(N) = N \times \prod_{p|N} (\frac{p-1}{p})  \ \ \ \ \ \ \ \ \ \ \ \ (p是质数)
 $$
+
+### 8.11.1 试除法求欧拉函数
+
+---
+
 $p$是质数，那么$p|N$就意味着$p$是$N$的质因子，因此可使用**试除法**在求解$N$的质因数的同时求解$\varphi(N)$。时间复杂度为$O(\sqrt{N})$.
 
 ```c++
@@ -5655,6 +5662,55 @@ long long getPhi(long long N){
         }
     }
     if(N > 1) res = res / N * (N - 1);
+}
+```
+
+### 8.11.2 线性筛法求欧拉函数
+
+---
+
+线性筛法可以求解 $[1,N]$范围内的所有数的欧拉函数，时间复杂度为$O(N)$.
+
+在线性筛中，对于质数可以直接得到其欧拉函数$\varphi(N) = N - 1$；如果是合数$m$,那么$m$其一定是被其**最小的质因子**筛掉的，这里不妨设$m$的最小质因子为$p_m$，那么有$p_m \times i = m$，有两种情况：
+
+1. $p_m$能整除$i$，意味着$i$也有质因子$p_m$，意味着$m$有的质因子$i$也有，那么有：
+
+$$
+\varphi(m) = m \times \prod_{p|m} (\frac{p-1}{p}) = p_m \times i \times \prod_{p|m} (\frac{p-1}{p}) = p_m \times (i \times \prod_{p|i} (\frac{p-1}{p})) = p_m \times \varphi(i)
+$$
+
+2. $p_m$不能整除$i$,因为$p_m$是质数，所以$p_m$和$i$互质，那么根据欧拉函数的积性函数性质，有:
+
+$$
+\varphi(m) = \varphi(p_m \times i) = \varphi(p_m) \times \varphi(i) = (p_m -1) \times \varphi(i)
+$$
+
+
+
+```c++
+int p[MAXN]; //记录质数
+bool vis[MAXN];
+int cnt;
+int phi[MAXN]; //phi[i]代表i的欧拉函数值
+
+void get_phi(int n){
+    phi[1] = 1;
+    for(int i=2;i<=n;i++){
+        if(!vis[i]){
+            p[cnt++] = i; //i是质数
+            phi[i] = i - 1;
+        }
+    }
+    for(int j=0;p[j] * i<=n;j++){
+        int m = p[j] * i;
+        vis[p[j] * i] = true;
+        if(i % p[j] == 0){ // 第一种情况，pm能整除i
+            phi[m] = p[j] * phi[i];
+        }
+        else { // 第二种情况，pm不能整除i
+            phi[m] = (p[j] - 1) * phi[i];
+        }
+    }
 }
 ```
 
