更新 5.9线性基-5.9.5查询异或第k小 5.9线性基-5.9.6查询值的排名

--- a/算法模板.md
+++ b/算法模板.md
@@ -4122,7 +4122,7 @@ void insert(LL x){
 ```c++
 bool check(LL x){
     for(int i = MAXBIT;i>=0;i--){
-        if(x & (1 << i)){
+        if(x & (1LL << i)){
             if(!a[i]){
                 return false;//无法表示出x
             }
@@ -4172,7 +4172,65 @@ LL queryMax(){
 
 ---
 
-TODO!!!
+首先重建线性基，尽力把每个$p[i]$只留下第$i$位的$1$，从而使得各个位之间互不影响，也就是说它的理想效果如下： $p[0] 0 0 0 0 1 p[1] 0 0 0 1 0 p[2] 0 0 1 0 0 p[3] 0 1 0 0 0 p[4] 1 0 0 0 0$.
+
+```c++
+LL a[MAXBIT + 5]; // 原线性基
+LL d[MAXBIT + 5]; // 记录重建的线性基
+LL cnt; //重建线性基尾标
+void rebuild(){
+    for(int i=MAXBIT;i>=0;i--){
+        for(int j=i-1;j>=0;j--){
+            if(a[i] & (1LL << j)) a[i] ^= a[j];
+        }
+    }
+    for(int i=0;i<=MAXBIT;i++){
+        if(a[i]){
+            d[cnt++] = a[i]; 
+        }
+    }
+}
+```
+
+紧接着，可得异或第$k$小，第$1$小就是$d[0]$，第2小就是$d[1]$，第3小就是$d[0]\  xor\  d[1]$，第4小就是$d[2]$，第五小就是$d[2]\ xor\ d[0]$，第六小就是$d[2]\ xor\ d[1]$，以此类推，可发现，这正好对应k的二进制位数。但要注意特判$0$的情况:
+
+```c++
+LL d[MAXBIT + 5]; // 记录重建的线性基
+LL cnt; //重建线性基尾标
+bool flag; //记录原先的数字能否异或出0
+//查询异或第k小，若不存在返回-1
+LL getkth(LL k){
+    if(k >= (1LL << cnt)) return -1; //最多只有(1<<cnt) - 1种结果
+    if(flag) k--; //如果包含0,要考虑0
+    LL ans = 0;
+    for(int i=MAXBIT;i>=0;i--){
+        if(k & (1LL << i)) ans ^= d[i]; //k的二进制第i位为1，就要异或d[i]
+    }
+    return ans;
+}
+```
+
+### 5.9.6 查询值的排名
+
+---
+
+在原数组能异或的所有结果中，查询$x$的排名。
+
+```c++
+LL d[MAXBIT + 5]; // 记录重建的线性基
+LL cnt; //重建线性基尾标
+bool flag; //记录原先的数字能否异或出0
+int getrank(LL x){
+    int res = 0;
+    for(int i=cnt-1;i>=0;i--){
+        if(x >= d[i]){ // x比d[i]大，那么从d[1] ~ d[i-1]异或出的所有结果都比x小
+            res += (1 << i);
+            x ^= d[i];
+        }
+    }
+    return res + flag; // 注意考虑0的贡献
+}
+```
 
 ## 5.10 区间树
 
@@ -5684,8 +5742,6 @@ $$
 $$
 \varphi(m) = \varphi(p_m \times i) = \varphi(p_m) \times \varphi(i) = (p_m -1) \times \varphi(i)
 $$
-
-
 
 ```c++
 int p[MAXN]; //记录质数
