更新 8.12威尔逊定理

--- a/算法模板.md
+++ b/算法模板.md
@@ -4995,7 +4995,7 @@ void SOLVE(){
 
 ---
 
-对于一个长度为`n`的字符串`str`有Z函数：`z[maxn]`。其中`z[i]`表示`str`从下标`i`开始的后缀子串`str[i~n]`与原串`str`的最长公共子串`LCP`。求解复杂度为：`O(n)`
+对于一个长度为`n`的字符串`str`有Z函数：`z[maxn]`。其中`z[i]`表示`str`从下标`i`开始的后缀子串`str[i~n]`与原串`str`的最长公共前缀`LCP`。求解复杂度为：`O(n)`
 
 ```c++
 int z[maxn];
@@ -5769,6 +5769,19 @@ void get_phi(int n){
     }
 }
 ```
+
+## 8.12 威尔逊定理
+
+威尔逊定理可如下所述：
+$$
+(n - 1)! \ \  mod \ \ n =
+\begin{cases}
+-1 \ \ \ \ \ (n为质数)\\
+2  \ \ \ \ \ \ \ \ (n = 4)\\
+0  \ \ \ \ \ \ \ \ (otherwise)
+\end{cases}
+$$
+
 
 # 9 计算几何
 
@@ -6546,7 +6559,26 @@ memset(a,0x7f,sizeof(a)); // 初始化为 INF 1.38242e+306
 memset(a,0xfe,sizeof(a)); // 初始化为 -INF 5.37794e-299
 ```
 
-## 11.6 多线程优化thread(C++11+)
+## 11.6 输入输出
+
+### 11.6.1 整行读入
+
+---
+
+读入一行字符串到string中(即不以空格作为分割字符),例如读入:`abc defglsadlk sd`。
+
+使用**\<string\>**下的**getline**函数实现，如下：
+
+```c++
+#include <string>
+
+std::string str;
+std::getline(std::cin,str); // 读入一整行字符串
+
+std::cout << str; //abc defglsadlk sd
+```
+
+## 11.7 多线程优化thread(C++11+)
 
 ---
 
@@ -6712,7 +6744,7 @@ int main() {
 
 在上面的示例中，`std::mutex` 被用于保护 `myFunction` 函数中的互斥代码块。线程在执行互斥代码块之前需要获取锁（通过 `myMutex.lock()`），并在执行完毕后释放锁（通过 `myMutex.unlock()`）。这确保了同一时刻只有一个线程可以访问互斥代码块。
 
-## 11.7 vim & bash配置
+## 11.8 vim & bash配置
 
 ---
 
