更新 9计算几何

--- a/算法模板.md
+++ b/算法模板.md
@@ -2990,7 +2990,7 @@ mp.empty();
 
 
 
-## 3.12 位串bitset(TODO)
+## 3.12 位串bitset
 
 ---
 
@@ -3001,6 +3001,43 @@ mp.empty();
 方法函数：
 
 ![](picture/9.png)
+
+注意bitset下标从第**0**位开始。
+
+bitset支持所有**位运算**操作：
+
+```c++
+// bitset operators
+#include <iostream>       // std::cout
+#include <string>         // std::string
+#include <bitset>         // std::bitset
+
+int main ()
+{
+  std::bitset<4> foo (std::string("1001"));
+  std::bitset<4> bar (std::string("0011"));
+
+  std::cout << (foo^=bar) << '\n';       // 1010 (XOR,assign)
+  std::cout << (foo&=bar) << '\n';       // 0010 (AND,assign)
+  std::cout << (foo|=bar) << '\n';       // 0011 (OR,assign)
+
+  std::cout << (foo<<=2) << '\n';        // 1100 (SHL,assign)
+  std::cout << (foo>>=1) << '\n';        // 0110 (SHR,assign)
+
+  std::cout << (~bar) << '\n';           // 1100 (NOT)
+  std::cout << (bar<<1) << '\n';         // 0110 (SHL)
+  std::cout << (bar>>1) << '\n';         // 0001 (SHR)
+
+  std::cout << (foo==bar) << '\n';       // false (0110==0011)
+  std::cout << (foo!=bar) << '\n';       // true  (0110!=0011)
+
+  std::cout << (foo&bar) << '\n';        // 0010
+  std::cout << (foo|bar) << '\n';        // 0111
+  std::cout << (foo^bar) << '\n';        // 0101
+
+  return 0;
+}
+```
 
 ## 3.13 数据对pair
 
@@ -3900,7 +3937,7 @@ next(x) = query_xthnum(root , query_rank(x + 1));
 
 可持久化线段树即可持久化权值线段树，亦称主席树，用于维护多个版本的权值线段树信息。对于n个规模的数据，可知其权值线段树的规模为 n*4, 每个版本会更新 logn个结点。因此，如果权值线段树有m个版本，那么主席树的空间开销为`4n + mlogn`。
 
-[]<picture/14.jpg>
+![](picture/14.jpg)
 
 ### 5.6.1 主席树相关信息
 
@@ -3911,11 +3948,11 @@ next(x) = query_xthnum(root , query_rank(x + 1));
 ```c++
 struct PSTnode {
     int lson,rson,sum;
-}PST[maxn * 40]; //一个结构体元素代表一个主席树结点，PST[i]维护的是编号为i的结点的信息,lson是其左孩子结点的编号，rson是其右孩子结点的编号，sum维护的是区间信息(区间和)。
+}PST[maxn << 5]; //一个结构体元素代表一个主席树结点，PST[i]维护的是编号为i的结点的信息,lson是其左孩子结点的编号，rson是其右孩子结点的编号，sum维护的是区间信息(区间和)。
 int cnt,root[maxn];// cnt是内存池尾标，表明当前已经开辟了几个结点,root[i]是第i个版本的根结点的编号
 ```
 
-PST要开辟`40maxn`的空间。
+PST开辟`32maxn`的空间足够(int规模数据下log值最多为32)。
 
 ### 5.6.2 注意事项
 
@@ -3948,7 +3985,7 @@ void update(int l,int r,int pre,int &now,int num){ //双指针同步搜索，pre
     // 这里不需要再更新信息了，因为前面已经更新过了
 }
 
-// insert(1,n,root[i-1],root[i],num); -- 注意num是离散化后的值
+// insert(1,n,root[i-1],root[i],num); -- 注意num是离散化后的值,注意n是离散化后的长度
 ```
 
 ### 5.6.4 主席树信息查询 : query
@@ -3958,17 +3995,39 @@ void update(int l,int r,int pre,int &now,int num){ //双指针同步搜索，pre
 查询信息可利用版本递归相减得到，下面给出arr数组上查询区间[x,y]上的第k小数据的信息查询
 
 ```c++
-int query(int l,int r,int L,int R,int k){ //L为1~x-1的版本，R为1~y的版本
+int query(int l,int r,int pre,int now,int k){ //pre为1~x-1的版本，now为1~y的版本
     if(l == r) return l;
     int mid = (l+r)>>1;
     
     //查询左区间的值，意思就是查询[L,R]区间有多少个数小于等于mid
-    int tot = PST[ PST[R].lson ].sum - PST[ PST[L].lson ].sum;//相减即当前区间维护的值
-    if(k <= tmp) return query(l,mid,PST[L].lson,PST[R].lson,k);// 共同去向左子树
-    return query(mid+1,r,PST[L].rson,PST[R].rson, k - tot); // 共同去向右子树
+    int tot = PST[ PST[now].lson ].sum - PST[ PST[pre].lson ].sum;//相减即当前区间维护的值
+    if(k <= tot) return query(l,mid,PST[pre].lson,PST[now].lson,k);// 共同去向左子树
+    return query(mid+1,r,PST[pre].rson,PST[now].rson, k - tot); // 共同去向右子树
 }
-// int ans = query(1,n,root[x-1],root[y],k);
+// int ans = query(1,n,root[x-1],root[y],k); -- 注意n是离散化后的长度而非原长度
 ```
+
+### 5.6.5 主席树初始化 : build
+
+---
+
+```c++
+void build(int l,int r,int &now){
+    ++cnt;
+    now = cnt;
+    if(l == r){
+        pst[now].v = a[l]; // 具体情况具体分析
+        return ;
+    }
+    int mid = (l + r) >> 1;
+    build(l,mid,pst[now].lson);
+    build(mid+1,r,pst[now].rson);
+}
+
+// build(1,n,root[0]); -- 假定初始版本编号为0
+```
+
+
 
 ## 5.7 分块
 
@@ -5784,6 +5843,679 @@ $$
 
 
 # 9 计算几何
+
+## 9.1 计算几何常用常量
+
+```c++
+const double pi = acos(-1.0); // π值
+const double inf = 1e100; // 极大值
+const double eps = 1e-8; // 误差限缺省
+```
+
+## 9.2 符号判断函数 -sgn
+
+```c++
+// 判断d值的符号，如果为0则返回0，正值则返回1，负值则返回-1
+int sgn(double d){
+    if(fabs(d) < eps) return 0;
+    if(d > 0) return 1;
+    return -1;
+}
+```
+
+## 9.3 浮点值比较大小函数 -dcmp
+
+```c++
+// x == y 返回0
+// x > y  返回1
+// x < y  返回-1
+int dcmp(double x,double y){
+    if(fabs(x - y) < eps) return 0;
+    if(x > y) return 1;
+    return -1;
+}
+```
+
+## 9.4 点 -Point
+
+```c++
+// 使用一组坐标(x,y)表示一个点
+struct Point{
+    double x, y;
+    Point(double x = 0, double y = 0):x(x), y(y){ }/ 构造函数
+};
+bool operator == (const Point& a,const Point& b){ return !dcmp(a.x - b.x) && !dcmp(a.y - b.y); }
+```
+
+## 9.5 向量 -Vector
+
+```c++
+// 使用一组坐标(x,y)表示一个向量(0,0)->(x,y)
+typedef Point Vector;
+// !向量 + 向量 = 向量，点 + 向量 = 向量
+Vector operator + (Vector A, Vector B){return Vector(A.x + B.x, A.y + B.y);}
+// !点 - 点 = 向量(向量BC = C - B)
+Vector operator - (Point A, Point B){return Vector(A.x - B.x, A.y - B.y);}
+// !向量 * 数 = 向量
+Vector operator * (Vector A, double p){return Vector(A.x * p, A.y * p);}
+// !向量 / 数= 向量
+Vector operator / (Vector A, double p){return Vector(A.x / p, A.y / p);}
+```
+
+## 9.6 点积 -Dot
+
+α⋅β=|α||β|cosθ 对加法满足分配律(满足交换律)
+
+```c++
+// !点积(满足交换律)
+double Dot(Vector A, Vector B){return A.x * B.x + A.y * B.y;}
+```
+
+## 9.7 叉积 -Cross
+
+α×β=|α||β|sinθ θ表示向量α旋转到向量β所经过的夹角 对加法满足分配律(不满足交换律) 
+
+几何意义:向量α与β所张成的平行四边形的有向面积 判断外积的符号 
+
+右手定则 α×β 若β在α的逆时针方向，则为正值、顺时针则为负值、两向量共线则为0
+
+```c++
+// !向量的叉积(不满足交换律)
+// 等于两向量有向面积的二倍(从v的方向看,w左,叉积>0,w右,叉积<0,共线,叉积=0)
+// cross(x, y) = -cross(y, x)
+// cross(x, y) : xAyB - xByA
+double Cross(Vector A, Vector B){return A.x *  B.y - B.x * A.y;}
+```
+
+## 9.8 向量的模(长度) -Length
+
+```c++
+double Length(Vector A){ return sqrt(Dot(A,A)); }
+```
+
+## 9.9 两向量夹角 -Angle
+
+返回值为弧度制下的夹角
+
+```c++
+double Angle(Vector A, Vector B){return acos(Dot(A, B) / Length(A) / Lenth(B));}
+```
+
+## 9.10 计算向量逆时针旋转后的向量 -Rotate
+
+```c++
+// !一个向量旋转rad弧度之后的新向量
+// !x' = xcosa - ysina, y' = xsina + ycosa
+// rad:弧度 且为逆时针旋转的角
+Vector Rotate(Vector A, double rad){
+    return Vector(A.x * cos(rad) - A.y * sin(rad), A.x * sin(rad) + A.y * cos(rad));
+}
+```
+
+## 9.11 计算向量逆时针旋转九十度的单位法线 -Normal
+
+```c++
+// !向量的单位法线实际上就是将该向量向左旋转90°
+// 因为是单位法线所以长度归一化调用前请确保A不是零向量
+Vector Normal(Vector A){
+    double L = Length(A);
+    return Vector(-A.y / L, A.x / L);
+}
+```
+
+## 9.12 点绕着 p 点逆时针旋转一定角度 -rotate
+
+```c++
+// 绕着 p 点逆时针旋转 angle
+Point rotate(Point p,double angle){
+    Point v = (*this) − p;
+    double c = cos(angle), s = sin(angle);
+    return Point(p.x + v.x*c − v.y*s,p.y + v.x*s + v.y*c);
+}
+```
+
+## 9.13 判断点和直线关系 -relation
+
+```c++
+// 点和直线关系
+// 1 在左侧
+// 2 在右侧
+// 3 在直线上 / 直线上两点s和e
+int relation(Point p){
+ int c = sgn(Cross((p−s),(e−s)));
+ if(c < 0)return 1;
+ else if(c > 0)return 2;
+ else return 3;
+}
+```
+
+## 9.14 直线 -Line
+
+直线可以用直线上的一个点P0和方向向量v表示
+
+即 P = P0 + vt。t为参数。
+
+```c++
+struct Line{// 直线定义
+    Point v, p;
+    Line(Point v, Point p):v(v), p(p) {}
+    Point point(double t){// 返回点P = v + (p - v)*t
+        return v + (p - v)*t;
+   }
+};
+// 对于A，B两点构成的直线, line_ab = Line(A - B,A); 直线上两点相减即构成方向向量
+```
+
+## 9.15 判断点是否在直线上
+
+利用三点共线的等价条件α×β==0 直线上取两不同点与待测点构成向量求叉积是否为零来判断点是否在直线上（叉积为0互相平行） 判断点与直线的关系（见9.13）
+
+## 9.16 计算两直线交点 -Get_line_intersection
+
+```c++
+// 调用前要确保两直线p + tv 和 Q + tw之间有唯一交点，当且仅当Corss(v, w) != 0;（t是参数）
+Point Get_line_intersection(Point P,Vector v,Point Q,Vector w)
+{
+ Vector u = P - Q;
+ double t = Cross(w, u) / Cross(v, w);
+ return P + v * t;
+}
+// !直线的参数式 直线 AB:A + tv(v为向量AB, t为参数)
+```
+
+## 9.17  计算点到直线的距离 -Distance_point_to_line
+
+```c++
+double Distance_point_to_line(Point P, Point A, Point B)
+{
+    Vector v1 = B - A, v2 = P - A;
+    return fabs(Cross(v1, v2) / Length(v1));// 如果不取绝对值，那么得到的是有向距离
+}
+```
+
+## 9.18 计算点到线段的距离 -Distance_point_to_segment
+
+```c++
+// 计算P点到线段AB的距离
+// 垂线距离或者PA或者PB距离 
+double Distance_point_to_segment(Point P, Point A, Point B)
+{
+    if(A  B) return Length(P - A);// （如果重合那么就是两个点之间的距离，直接转成向量求距离即可）
+    Vector v1 = B - A, v2 = P - A, v3 = P - B;
+    if(dcmp(Dot(v1, v2)) < 0) return Length(v2);// A点左边
+    if(dcmp(Dot(v1, v3)) > 0)return Length(v3);// B点右边
+    return fabs(Cross(v1, v2) / Length(v1));// 垂线的距离
+}
+```
+
+## 9.19 求点在直线上的投影点 -Get_line_projection
+
+```c++
+// 点P在直线AB上的投影
+// 点积满足分配率:两直线垂直，点积为0，向量v,Q = A + t0v,
+// 点P,v与直线PQ垂直:  
+// Dot(v, p - (A + t0v)) = 0 - Dot(v, P - A) - t0 * Dot(v, v) = 0;
+Point Get_line_projection(Point P, Point A, Point B)
+{
+    Vector v = B - A;
+    return A + v * (Dot(v, P - A) / Dot(v, v));
+}
+```
+
+## 9.20 判断点是否在线段上 -OnSegment
+
+```c++
+bool OnSegment(Point p, Point a1, Point a2){
+    return dcmp(Cross(a1-p, a2-p)) == 0 && dcmp(Dot(a1-p, a2-p)) <= 0;// 紫书上写的是小于，但是真正写题的时候写成才A
+}
+```
+
+```c++
+bool Onsegment(point pi,point pj,point Q){
+    if((Q.x-pi.x)*(pj.y-pi.y)==(pj.x-pi.x)*(Q.y-pi.y) && min(pi.x,pj.x) <= Q.x && Q.x <= max(pi.x,pj.x) && min(pi.y,pj.y) <= Q.y && Q.y <= max(pi.y,pj.y)){
+        return true;
+    }
+    return false;
+}
+```
+
+## 9.21 判断两线段是否相交 -Segment_proper_intersection
+
+不算在端点处相交：
+
+```c++
+bool segment_proper_intersection(Point a1, Point a2, Point b1, Point b2){
+    double c1 = Cross(a2 - a1, b1 - a1), c2 = Cross(a2 - a1, b2 - a1);
+    double c3 = Cross(b2 - b1, a1 - b1), c4 = Cross(b2 - b1, a2 - b1);
+    return (sgn(c1)*sgn(c2) < 0 && sgn(c3)*sgn(c4) < 0);
+}
+```
+
+包含端点处的相交：
+
+```c++
+bool Segment_proper_intersection(Point a1, Point a2, Point b1, Point b2){
+    double c1 = Cross(a2-a1, b1-a1), c2 = Cross(a2-a1, b2-a1);
+    double c3 = Cross(b2-b1, a1-b1), c4 = Cross(b2-b1, a2-b1);
+    // if判断控制是否允许线段在端点处相交，根据需要添加
+    if(!sgn(c1)  !sgn(c2)  !sgn(c3)  !sgn(c4)){
+        bool f1 = OnSegment(b1, a1, a2);
+        bool f2 = OnSegment(b2, a1, a2);
+        bool f3 = OnSegment(a1, b1, b2);
+        bool f4 = OnSegment(a2, b1, b2);
+        bool f = (f1|f2|f3|f4);
+        return f;
+   }
+    return (sgn(c1)*sgn(c2) < 0 && sgn(c3)*sgn(c4) < 0);
+}
+```
+
+## 9.22 判断点是否在线段上(不含端点) -on_segment
+
+```c++
+bool on_segment(Point P, Point a1, Point a2){
+    return dcmp(Cross(a1 - P, a2 - P)) && dcmp(Dot(a1 - P, a2 - P)) < 0;
+}
+```
+
+## 9.23 求多边形面积 -convex_polygon_area
+
+```c++
+// !求凸多边形的有向面积
+// 叉积的几何意义就是三角形有向面积的二倍，所以这里要除以二
+double convex_polygon_area(Point* p, int n){
+    double area = 0;
+    for(int i = 1; i <= n - 2;++i)
+        area += Cross(p[i] - p[0], p[i + 1] - p[0]);
+    return area / 2;
+}
+// !求非凸多边形的有向面积
+// 我们叉积求得的三角形面积是有向的，在外面的面积可以正负抵消掉，
+// 因此非凸多边形也适用，可以从任意点出发划分
+// 可以取原点为起点，减少叉乘次数
+double polyg_on_area(Point* p, int n){
+    double area = 0;
+    for(int i = 1; i <= n - 2;++i)
+        area += Cross(p[i] - p[0], p[i + 1] - p[0]);
+    return area / 2;
+}
+```
+
+## 9.24 判断点在多边形内 -is_point_in_polygon
+
+```c++
+// 判断点是否在多边形内，若点在多边形内返回1，在多边形外部返回0，在多边形上返回-1
+int is_point_in_polygon(Point p, vector<Point> poly){// 待判断的点和该多边形的所有点的合集
+    int wn = 0;
+    int n = poly.size();
+    for(int i = 0; i < n;  i){
+        if(OnSegment(p, poly[i], poly[(i+1)%n])) return -1;
+        int k = sgn(Cross(poly[(i+1)%n] - poly[i], p - poly[i]));
+        int d1 = sgn(poly[i].y - p.y);
+        int d2 = sgn(poly[(i+1)%n].y - p.y);
+        if(k > 0 && d1 <= 0 && d2 > 0) wn++;
+        if(k < 0 && d2 <= 0 && d1 > 0) wn--;
+   }
+    if(wn != 0)
+        return 1;
+    return 0;
+}
+```
+
+## 9.25 求多边形的重心 -barycenter
+
+重心：三条中线的交点，到三角形三顶点距离的平方和最小的点，三角形内到三边距离之积最大的点
+
+```c++
+// xmult 表示向量oa与向量ob的叉积
+inline double xmult(point o,point a,point b) {
+    return (a.x-o.x)*(b.y-o.y)-(b.x-o.x)*(a.y-o.y);
+}
+
+point barycenter(int n,point* p){
+	point ret,t;
+	double t1=0,t2;
+	int i;
+	ret.x=ret.y=0;
+	for (i=1;i<n-1;i++){
+		if(fabs(t2=xmult(p[0],p[i],p[i+1]))>eps){
+ 			t=barycenter(p[0],p[i],p[i+1]);
+ 			ret.x+=t.x*t2;
+ 			ret.y+=t.y*t2;
+ 			t1+=t2;
+ 		}
+    }
+ 	if(fabs(t1)>eps)
+ 		ret.x /= t1,ret.y /= t1;
+ 	return ret;
+}
+```
+
+特殊地，三角形重心为 $(\frac{x1+x2+x3}{3},\frac{y1+y2+y3}{3})$
+
+## 9.26 求三角形四心
+
+外心：三边中垂线交点，到三角形三个顶点距离相同
+
+```c++
+Point waixin(Point a, Point b, Point c){
+    double a1 = b.x - a.x, b1 = b.y - a.y, c1 = (a1 * a1 + b1 * b1) / 2;
+    double a2 = c.x - a.x, b2 = c.y - a.y, c2 = (a2 * a2 + b2 * b2) / 2;
+    double d = a1 * b2 - a2 * b1;
+    return Point(a.x + (c1 * b2 - c2 * b1) / d, a.y + (a1 * c2 -a2 * c1) / d);
+}
+```
+
+内心：见9.39求三角形内接圆的圆心
+
+重心：见9.25三角形重心公式
+
+垂心：三条高线的交点
+
+```c++
+inline Circle getcircle(Point A,Point B,Point C){// 【三点确定一圆】向量垂心法
+    Point P1=(A+B)*0.5,P2=(A+C)*0.5;
+    Point O=cross_LL(P1,P1+Normal(B-A),P2,P2+Normal(C-A));
+    return Circle(O,Len(A-O));
+}
+```
+
+## 9.27 圆 -Circle
+
+储存圆通常记录圆心坐标与半径即可
+
+```c++
+struct Circle {
+	Point c;
+	double r;
+	Circle(Point c=Point(),double r=0):c(c),r(r){}
+	inline Point point(double a){// 通过圆心角求坐标
+        return Point(c.x+cos(a)*r,c.y+sin(a)*r);
+    }
+};
+inline Circle read_circle(){
+	Circle C;
+	scanf("%lf%lf%lf",&C.c.x,&C.c.y,&C.r);
+	return C;
+}
+```
+
+## 9.28 圆与直线交点 -getLineCircleIntersection
+
+```c++
+// 求圆与直线交点
+// 交点个数有0,1,2三种可能，sol存储所有交点，函数返回交点的个数
+int getLineCircleIntersection(Line L, Circle C, double& t1, double& t2, vector<Point>& sol){
+    double a = L.v.x, b = L.p.x - C.c.x, c = L.v.y, d = L.p.y - C.c.y;
+    double e = a*a + c*c, f = 2*(a*b + c*d), g = b*b + d*d - C.r*C.r;
+    double delta = f*f - 4*e*g;// 判别式
+    if(sgn(delta) < 0){//相离
+        return 0;
+    }
+	if(sgn(delta) == 0){// 相切
+        t1 = -f / (2*e);
+        t2 = -f / (2*e);
+        sol.push_back(L.point(t1));// sol存放交点本身
+        return 1;
+    }
+    // 相交
+    t1 = (-f - sqrt(delta))/(2*e);
+    sol.push_back(L.point(t1));
+    t2 = (-f + sqrt(delta))/(2*e);
+    sol.push_back(L.point(t2));
+    return 2;
+}
+```
+
+## 9.29  求两圆交点 -get_circle_circle_intersection
+
+```c++
+// 两圆相交保存所有交点返回交点个数（至多两个) 如果两圆完全重合，返回-1
+int get_circle_circle_intersection(Circle c1, Circle c2, vector<Point>& sol){
+    double d = Length(c1.c - c2.c);
+    if(sgn(d) == 0){
+        if(dcmp(c1.r - c2.r) == 0)return -1;// 两圆重合
+        return 0; //半径不同，是同心圆
+   	}
+    if(sgn(c1.r + c2.r - d) < 0) return 0;// 相离
+    if(sgn(fabs(c1.r - c2.r) - d) > 0) return 0;// 在另一个圆的内部
+    double a = angle(c2.c - c1.c);// 向量c1c2的极角
+    double da = acos((c1.r * c1.r + d * d - c2.r * c2.r) / (2 * c1.r * d));
+    // c1c2到c1p1的角
+    Point p1 = c1.point(a - da), p2 = c1.point(a + da);
+    sol.push_back(p1);
+    if(p1 == p2)return 1;
+    sol.push_back(p2);
+    return 2;
+}
+```
+
+## 9.30 点到圆的切线 -get_tangents
+
+```c++
+// 过点p到圆c的切线，v[i]是第i条切线,返回切线的条数，下标从0开始存储
+int get_tangents(Point p, Circle C, Vector* v){
+    Vector u = C.c - p;
+    double dist = Length(u);
+    if(dist < C.r) return 0;// 点在内部，没有切线
+    else if(sgn(dist - C.r) == 0){// p在圆上，只有一条切线
+        v[0] = Rotate(u, PI / 2);// 切线就是该点与圆心连线的垂线 PI = acos(-1.0)
+        return 1;
+   	}
+    else {// 否则是两条切线
+        double ang = asin(C.r / dist);
+        v[0] = Rotate(u, - ang);
+        v[1] = Rotate(u, +ang);
+        return 2;
+   }
+}
+```
+
+## 9.31 两圆的公切线 -get_tangents
+
+两圆的公切线。 
+
+根据两圆的圆心距从小到大排列，一共有6种情况。 
+
+情况一：两圆完全重合。有无数条公切线。 
+
+情况二：两圆内含，没有公共点。没有公切线。
+
+情况三：两圆内切。有1条外公切线。
+
+情况四：两圆相交。有2条外公切线。 
+
+情况五：两圆外切。有3条公切线，其中一条内公切线，两条外公切线。 
+
+情况六：两圆相离。有4条公切线，其中内公切线两条，外公切线两条。 
+
+可以根据圆心距和半径的关系辨别出这6种情况，然后逐一求解。 
+
+情况一和情况二没什么需要求的，情况三和情况五中的内公切线都对应 于“过圆上一点求圆的切线”，只需连接圆心和切点，旋转90°后即可知道切线的方向向量。这样，问题的关键是求出情况四、五中的外公切线和情况六中的内公切线。
+
+```c++
+// 返回切线的条数，-1表示无穷条切线
+// a[i]和b[i] 分别是第i条切线在圆A和圆B上的切点,下标均从0开始存储
+int get_tangents(Circle A, Circle B, Point* a, Point* b){
+    int cnt = 0;
+    if(A.r < B.r)swap(A, B), swap(a, b);
+    int d2 = (A.x - B.x) * (A.x - B.x) + (A.y - B.y) * (A.y - B.y);
+    int rdiff = A.r - B.r;
+    int rsum = A.r + B.r;
+    if(d2 < rdiff * rdiff)return 0;// 内含
+    double base = atan2(B.y - A.y, B.x - A.x);
+    if(d2 == 0 && A.r == B.r) return -1;// 无限多条切线
+    if(d2 == rdiff * rdiff){// 内切，1条切线
+        a[cnt] = A.point(base);
+        b[cnt] = B.point(base);
+        cnt++;
+        return 1;
+   	}
+    // 有外共切线
+    double ang = acos((A.r - B.r) / sqrt(d2));
+    a[cnt] = A.point(base + ang);b[cnt] = B.point(base + ang);cnt++;
+    a[cnt] = A.point(base - ang);b[cnt] = B.point(base - ang);cnt++;
+    if(d2 == rsum * rsum){// 一条内公切线
+        a[cnt] = A.point(base);b[cnt] = B.point(PI + base);cnt++;
+   	}
+    else if(d2 > rsum * rsum){/ 两条内公切线
+        double ang = acos((A.r + B.r) / sqrt(d2));
+        a[cnt] = A.point(base + ang); b[cnt] = B.point(PI + base + ang);cnt++;
+        a[cnt] = A.point(base - ang); b[cnt] = B.point(PI + base - ang);cnt++;
+   	}
+    return cnt;
+}
+```
+
+## 9.32 两圆相交面积 -AreaOfOverlap
+
+通过计算两个圆相交所构成的两个扇形面积和减去其构成的筝形的面积
+
+```c++
+double AreaOfOverlap(Point c1, double r1, Point c2, double r2){
+    double d = Length(c1 - c2);
+    if(r1 + r2 < d + eps)
+        return 0.0;
+    if(d < fabs(r1 - r2) + eps){
+        double r = min(r1, r2);
+        return pi*r*r;
+   	}
+    double x = (d*d + r1*r1 - r2*r2)/(2.0*d);
+    double p = (r1 + r2 + d)/2.0;
+    double t1 = acos(x/r1);
+    double t2 = acos((d - x)/r2);
+    double s1 = r1*r1*t1;
+    double s2 = r2*r2*t2;
+    double s3 = 2*sqrt(p*(p - r1)*(p - r2)*(p - d));
+    return s1 + s2 - s3;
+}
+```
+
+## 9.33 判直线和圆相交 -intersect_line_circle
+
+```c++
+// 判直线和圆相交,包括相切
+// disptoline为点到直线距离
+int intersect_line_circle(point c,double r,point l1,point l2){
+ 	return disptoline(c,l1,l2)<r+eps;
+}
+```
+
+## 9.34 判线段和圆相交 -intersect_seg_circle
+
+```c++
+// 判线段和圆相交,包括端点和相切
+// distance为两点距离
+int intersect_seg_circle(point c,double r,point l1,point l2){
+	double t1=distance(c,l1)-r,t2=distance(c,l2)-r;
+	point t=c;
+	if(t1<eps || t2<eps) return t1>-eps||t2>-eps;
+	t.x+=l1.y-l2.y;
+	t.y+=l2.x-l1.x;
+	return xmult(l1,c,t)*xmult(l2,c,t)<eps && disptoline(c,l1,l2)-r<eps;
+}
+```
+
+## 9.35 判圆和圆相交 -intersect_circle_circle
+
+```c++
+// 判圆和圆相交,包括相切
+// distance为两点距离
+int intersect_circle_circle(point c1,double r1,point c2,double r2){
+	return distance(c1,c2)<r1+r2+eps && distance(c1,c2)>fabs(r1-r2)-eps;
+}
+```
+
+## 9.36 计算圆上到点p最近点 -dot_to_circle
+
+```c++
+// 计算圆上到点p最近点,如p与圆心重合,返回p本身
+// distance为两点距离
+point dot_to_circle(point c,double r,point p){
+	point u,v;
+	if(distance(p,c)<eps) return p;
+	u.x=c.x+r*fabs(c.x-p.x)/distance(c,p);
+	u.y=c.y+r*fabs(c.y-p.y)/distance(c,p)*((c.x-p.x)*(c.y-p.y)<0?-1:1);
+	v.x=c.x-r*fabs(c.x-p.x)/distance(c,p);
+	v.y=c.y-r*fabs(c.y-p.y)/distance(c,p)*((c.x-p.x)*(c.y-p.y)<0?-1:1);
+ 	return distance(u,p)<distance(v,p)?u:v;
+}
+
+```
+
+## 9.37 求圆外一点对圆的两个切点 -TangentPoint_PC
+
+```c++
+// 求圆外一点对圆(o,r)的两个切点result1和result2
+void TangentPoint_PC(Point poi,Point o,double r,Point &result1,Point &result2) {
+    double line=sqrt((poi.x-o.x)*(poi.x-o.x)+(poi.y-o.y)*(poi.y-o.y));
+    double angle=acos(r/line);
+    Point unitvector,lin;
+    lin.x=poi.x-o.x;
+    lin.y=poi.y-o.y;
+    unitvector.x=lin.x/sqrt(lin.x*lin.x+lin.y*lin.y)*r;
+    unitvector.y=lin.y/sqrt(lin.x*lin.x+lin.y*lin.y)*r;
+    result1=Rotate(unitvector,-angle);
+    result2=Rotate(unitvector,angle);
+    result1.x+=o.x;
+    result1.y+=o.y;
+    result2.x+=o.x;
+    result2.y+=o.y;
+    return;
+}
+```
+
+## 9.38 求三角形的外接圆 -get_circumcircle
+
+```c++
+// get_circumcircle
+Circle WaiJieYuan(Point p1,Point p2,Point p3){
+	double Bx=p2.x-p1.x,By=p2.y-p1.y;
+	double Cx=p3.x-p1.x,Cy=p3.y-p1.y;
+	double D=2*(Bx*Cy-By*Cx);
+	double ansx=(Cy*(Bx*Bx+By*By)-By*(Cx*Cx+Cy*Cy))/D+p1.x;
+	double ansy=(Bx*(Cx*Cx+Cy*Cy)-Cx*(Bx*Bx+By*By))/D+p1.y;
+	Point p(ansx,ansy);
+	return Circle(p,Length(p1-p));
+}
+```
+
+## 9.39 求三角形的内接圆 -get_incircle
+
+```c++
+/ get_incircle
+Circle NeiJieYuan(Point p1,Point p2,Point p3){
+	double a=Length(p2-p3);
+	double b=Length(p3-p1);
+	double c=Length(p1-p2);
+	Point p=(p1*a+p2*b+p3*c)/(a+b+c);
+	return Circle(p,DistanceToLine(p,p1,p2));
+}
+
+```
+
+## 9.40 多边形内/上的网格点个数
+
+```c++
+#define abs(x) ((x)>0?(x):-(x))
+struct point{int x,y;};
+int gcd(int a,int b){return b?gcd(b,a%b):a;}
+// 多边形上的网格点个数, p为多边形的点集，下标从0开始
+int grid_onedge(int n,point* p){
+	int i,ret=0;
+	for (i=0;i<n;i++)
+	ret+=gcd(abs(p[i].x-p[(i+1)%n].x),abs(p[i].y-p[(i+1)%n].y));
+	return ret;
+}
+// 多边形内的网格点个数，p为多边形的点集，下标从0开始
+int grid_inside(int n,point* p){
+	int i,ret=0;
+	for (i=0;i<n;i++)
+ 		ret+=p[(i+1)%n].y*(p[i].x-p[(i+2)%n].x);
+ 	return (abs(ret)-grid_onedge(n,p))/2+1;
+}
+
+```
 
 # 10 类外算法
 
